# nexus

./: .env.example  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/core/: config.py
backend/db/: database.py  models.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: b3b4a11cf61c_create_research_reports_table.py
frontend/: nginx.conf
tests/: test_placeholder.py
